--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,11 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
     "recharts": "^2.1.15",
     "sass": "^1.80.5",
+    "slick-carousel": "^1.8.1",
     "toastify": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
